docker-practise/docker-k8s-mevn-practise/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: vue
  ports:
    - port: 5173
      targetPort: 5173
