docker-practise/docker-k8s-mevn-practise/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # Removes the "/api" part in api calls
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: myingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 5173
          - pathType: Prefix
            path: /api/?(.*)
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 3001
